# stock_warehouse

./: .env.example  .env.local.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  README_UNIFIED.md  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml  test_catalog.py  test_middleware.py
.kiro/specs/unified-warehouse-database-schema/: design.md  requirements.md  tasks.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_core_tables.py  0002_create_celery_scheduler_tables.py  43e2d1e8c21f_add_soft_delete_fields.py  529d572a4609_initial_unified_schema.py  a69d82115a7e_remove_depric_table.py  c5f7d3267c85_make_inventories.py  create_triggers_and_data.py  f1a2b3c4d5e6_add_item_group_description.py
docs/: deployment_guide.md  frontend_overview.md  permissions_guide.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: allegro.ts  auth.ts  catalogs.ts  permissions.ts
frontend/src/components/: AuthLayout.module.css  AuthLayout.tsx  (+9 more)
scripts/: celery-beat-entrypoint.sh  check_admin_permissions.py  check_system_status.py  create_admin_unified.py  debug_auth.py  entrypoint.sh  grant_system_admin.py  init_celery_beat.py  make_system_admin.py  setup_demo_data.py  setup_user_cleanup_schedule.py  test_api_endpoints.py  test_auth_system.py  test_password.py  test_system.py  test_unified_system.py
src/warehouse_service/: __init__.py  app.py
tests/: test_notifications.py  test_settings.py
(+109 files in other folders)
