[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-service"
version = "0.1.0"
description = "Unified warehouse management service with RBAC and audit capabilities."
authors = [{ name = "Warehouse Team" }]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.12",
    "bcrypt>=4.0",
    "celery[redis,sqlalchemy]>=5.3",
    "sqlalchemy-celery-beat>=0.8.4,<0.9",
    "fastapi>=0.110",
    "httpx>=0.27",
    "loguru>=0.7",
    "psycopg[binary,pool]>=3.1",
    "pydantic>=2.5",
    "pydantic[email]>=2.5",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.6",
    "python-telegram-bot>=20.7",
    "pyjwt>=2.8",
    "redis>=5.0",
    "sqlmodel>=0.0.16",
    "uvicorn[standard]>=0.24"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1"
]

[tool.ruff]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["warehouse_service"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
